# market-research-agent

./: README.md
Crew/latest_ai_development/: report.md
Crew/latest_ai_development/src/latest_ai_development/: crew.py  main.py
Crew/latest_ai_development/src/latest_ai_development/config/: agents.yaml
Crew/university_registration/: README.md  pyproject.toml
Crew/university_registration/src/university_registration/: crew.py  main.py
Pdf-document-reader/: pdf document reader.py
