[project]
name = "university_registration"
version = "0.1.0"
description = "university_registration using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
university_registration = "university_registration.main:run"
run_crew = "university_registration.main:run"
train = "university_registration.main:train"
replay = "university_registration.main:replay"
test = "university_registration.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
